fix: 1.2.7 modal z-index

--- a/modalz/index.scss
+++ b/modalz/index.scss
@@ -1,5 +1,6 @@
 #modalz {
     position: fixed;
+    z-index: 9999;
     width: 100%;
     height: 100vh;
     justify-content: center;
